--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 	</div>
 	
 <div class="social-links-wrapper">
-			<a href=" " target="_blank">
+			<a href="http://www.facebook.com/yeji.do" target="_blank">
 				<i class="icon icon-facebook"><span>facebook</span></i></a>
-			<a href=" " target="_blank"><i class="icon icon-pinterest"><span>pinterest</span></i></a>
+			<a href="http://www.pinterest.com/yeji0125" target="_blank"><i class="icon icon-pinterest"><span>pinterest</span></i></a>
 			
 		
-			<a href=" " target="_blank"><i class="icon icon-behance"><span>behance</span></i></a>
+			<a href="https://www.behance.net/YejiDo" target="_blank"><i class="icon icon-behance"><span>behance</span></i></a>
 
 
 		</div>
