updates on media query

--- a/index.html
+++ b/index.html
@@ -15,30 +15,36 @@
 	<div class="wrapper">
 		<div class="content-wrap">
 		<div class="image-wrap"><img src="yj-logo-white-small.png"></div>
-		<h1>Integer eleifend nisl eget</h1>
+		
+		<h1>Hello! Nice to meet you</h1>
 			
-		<div class="box"> <span>Ladila</span></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elementum, libero sed suscipit condimentum, erat enim iaculis diam, sed adipiscing purus velit eu neque. Nunc id dictum dolor, a iaculis dolor. Etiam sem orci, elementum nec ante venenatis, rutrum varius nulla. Nullam pellentesque ac eros ut aliquam. Donec in nunc ac magna feugiat condimentum non ac quam. Integer eleifend nisl eget elit auctor interdum. Fusce ligula eros, mattis id pretium nec, ultrices eu tortor. Quisque consequat faucibus gravida.</p>
+		
+			<p>This is a practice page. Practice makes everything perfect. Keep on practicing.  Etiam sem orci, elementum nec ante venenatis, rutrum varius nulla. Nullam pellentesque ac eros ut aliquam. Donec in nunc ac magna feugiat condimentum non ac quam. Integer eleifend nisl eget elit auctor interdum. Fusce ligula eros, mattis id pretium nec, ultrices eu tortor. Quisque consequat faucibus gravida.</p>
 		</div>
 		
-		
+		<div class="box"> <span>Ladila</span></div>
 	</div>
 	
-<div class="social-links-wrapper">
-			<a href="http://www.facebook.com/yeji.do" target="_blank">
-				<i class="icon icon-facebook"><span>facebook</span></i></a>
-			<a href="http://www.pinterest.com/yeji0125" target="_blank"><i class="icon icon-pinterest"><span>pinterest</span></i></a>
+	<div class="social-links-wrapper">
+
+		<ul>
+			<li><a href="http://www.facebook.com/yeji.do" target="_blank">
+				<i class="icon icon-facebook"><span>facebook</span></i></a></li>
 			
-		
-			<a href="https://www.behance.net/YejiDo" target="_blank"><i class="icon icon-behance"><span>behance</span></i></a>
+			<li><a href="http://www.pinterest.com/yeji0125" target="_blank"><i class="icon icon-pinterest"><span>pinterest</span></i></a></li>
+					
+			<li><a href="https://www.behance.net/YejiDo" target="_blank"><i class="icon icon-behance"><span>behance</span></i></a></li>
+		</ul>
 
-
-		</div>
+	</div>
 	
-<div class="footer"><span>Good Bye. </span><span>See you again?</span></div>
-
+<div class="footer"><span>Thank you for coming.</span><span>Good Bye. </span><span>See you again.</span></div>
 
 	
 
 </body>
 </html>
+
+
+
+
