tweak for mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<h1>Hello! Nice to meet you</h1>
 			
 		
-			<p>This is a practice page. Practice makes everything perfect. Keep on practicing.  Etiam sem orci, elementum nec ante venenatis, rutrum varius nulla. Nullam pellentesque ac eros ut aliquam. Donec in nunc ac magna feugiat condimentum non ac quam. Integer eleifend nisl eget elit auctor interdum. Fusce ligula eros, mattis id pretium nec, ultrices eu tortor. Quisque consequat faucibus gravida.</p>
+			<p>This is a practice page. Practice makes everything perfect. Keep on practicing.  Etiam sem orci, elementum nec ante venenatis, rutrum varius nulla. Nullam pellentesque ac eros ut aliquam. Donec in nunc ac magna feugiat condimentum non ac quam. Integer eleifend nisl eget elit auctor interdum. </p>
 		</div>
 		
 		<div class="box"> <span>Ladila</span></div>
